<resources>
    <string name="app__version__label">Version</string>
    <string name="enable_ime_dialog_title">Please Enable IME</string>
    <string name="enable_ime_dialog_content">In order to utilize the keyboard, you need to enable
        the keyboard first. Once you click on the enable button, you will be taken to the input
        method settings screen. Please enable the "{app_name} Keyboard" there.</string>
    <string name="enable_ime_dialog_neutral_button_text">Enable</string>
    <string name="activate_ime_dialog_title">Please Activate IME</string>
    <string name="activate_ime_dialog_content">It will be easier for you to fiddle with the setting
        and verify them, if "{app_name} Keyboard" is active. Would you like to switch to {app_name}
        keyboard now? </string>
    <string name="activate_ime_dialog_positive_button_text">Switch</string>
    <string name="activate_ime_dialog_negative_button_text">Dismiss</string>
    <string name="keyboard_test_edit_text_hint">Test your keyboard here</string>
    <string name="settings__help__feedback"><![CDATA[Help & Feedback]]></string>
    <string name="share_app">Share {app_name}</string>
    <string name="select_preferred_emoticon_keyboard_dialog_title">Choose the input method</string>
    <string name="select_preferred_keyboard_layout_dialog_title">Choose the language</string>
    <string name="dialog__yaml__error__title">Couldn\'t load layout file</string>
    <string name="dialog__error__title">Error</string>
    <string name="dialog__confirm__label">OK</string>
    <string name="dialog__save__label">Save</string>
    <string name="dialog__dismiss__label">Cancel</string>
    <string name="about__title">About Us</string>
    <string name="about__description">More than just a clone for now defunct 8Pen Application.</string>
    <string name="about__third_party_licenses__title">Third-party licenses</string>
    <string name="about__third_party_licenses__summary">Licenses of the third-party libraries included in this app</string>
    <string name="open_emoticon_keyboard_button_content_description">Open Emoticon Keyboard</string>
    <string name="tab_button_content_description">Tab</string>
    <string name="ctrl_button_content_description">Ctrl button</string>
    <string name="open_selection_keypad_button_content_description">Open Selection Keypad</string>
    <string name="open_keyboard_settings_button_content_description">Open Keyboard Settings</string>
    <string name="clipboard_button_content_description">Open Clipboard keypad</string>
    <string name="main_keyboard_button_content_description">Open Main keypad</string>
    <string name="floating_keyboard_button_content_description">Floating</string>
    <string name="generic_back_button_content_description">Go Back</string>
    <string name="settings__about__owner__label">Designed and Developed by flide</string>
    <string name="connect_with_us_label">Connect with us</string>
    <string name="github_icon_content_description">Github Icon</string>
    <string name="settings__about__github__label">Fork us on GitHub</string>
    <string name="matrix_icon_content_description">Matrix Icon</string>
    <string name="settings__about__matrix__label">Join us on Matrix</string>
    <string name="play_store_icon_content_description">Google Play store icon</string>
    <string name="settings__about__play_store__label">Rate us on the Play Store</string>
    <string name="twitter_icon_content_description">"Twitter icon"</string>
    <string name="settings__about__twitter__label">Follow us on Twitter</string>
    <string name="choose_the_8vim">Choose 8Vim above.We will NEVER collect any personal data.</string>
    <string name="vim8__repository_url" translatable="false">https://github.com/8VIM/8VIM</string>
    <string name="general__no_browser_app_found_for_url">No browser app found for handling URL {url}</string>
    <string name="setup__title" comment="Title of Setup">Welcome!</string>
    <string name="setup__intro_message" comment="Short intro message welcoming new users">Thanks for using {app_name}! This quick setup guides you through the required steps to use {app_name} on your device.</string>
    <string name="setup__footer__repository" comment="Repository label for URL">Repository</string>
    <string name="setup__enable_ime__title">Enable {app_name}</string>
    <string name="setup__enable_ime__description">Android requires that every custom keyboard is separately enabled before you can use it. Open the System <i>Language &amp; Input</i> Settings, there enable "{app_name}".</string>
    <string name="setup__enable_ime__open_settings_btn">Open System Settings</string>
    <string name="setup__select_ime__title">Select {app_name}</string>
    <string name="setup__select_ime__description">{app_name} is now enabled in your system. To actively use it, switch to {app_name} by selecting it in the input selector dialog!</string>
    <string name="setup__select_ime__switch_keyboard_btn">Switch Keyboard</string>
    <string name="setup__finish_up__title">Finish Up</string>
    <string name="setup__finish_up__description_p1">{app_name} is now enabled in the system and ready to be customized by you.</string>
    <string name="setup__finish_up__description_p2">If you encounter any issues, bugs, crashes or just want to make a suggestion, check out the project repository from the about screen!</string>
    <string name="setup__finish_up__finish_btn">Start Customizing</string>
    <string name="settings__title" comment="Title of Settings">Settings</string>
    <string name="settings__home__title" comment="Title of the Home screen">Welcome to {app_name}</string>
    <string name="settings__home__ime_not_enabled">{app_name} is not enabled in the system and thus won\'t be available as an input method in the input picker.\nClick here to resolve this issue.</string>
    <string name="settings__home__ime_not_selected">{app_name} is not selected as the default input method.\nClick here to resolve this issue.</string>
    <string name="settings__layouts__title" comment="Title of Layout screen">Layouts</string>
    <string name="settings__layouts__select__title">Select language layout</string>
    <string name="settings__layouts__select__summary">Chosen language will decide which diacritics
        can be entered </string>
    <string name="settings__layouts__load_custom__title">Select layout file from device</string>
    <string name="settings__layouts__load_custom__summary">Layout file from the device memory
        will be loaded. Please note this is experimental and might not work.</string>
    <string name="settings__layouts__usages__title">Usages of {layout}</string>
    <string name="settings__layouts__usage__title">Usage of {action}</string>
    <string name="settings__clipboard__title" comment="Title of Clipboard screen">Clipboard</string>
    <string name="settings__keyboard__title" comment="Title of Keyboard screen">Keyboard</string>
    <string name="settings__keyboard__select__emoji__keyboard__title">Select emoji keyboard</string>
    <string name="settings__keyboard__select__emoji__keyboard__summary">Chosen keyboard will be accessible through
        keyboard\'s emoji icon </string>
    <string name="settings__keyboard__circle__auto_resize_group__title">Circle auto resizing and dynamic circle</string>
    <string name="settings__keyboard__circle__auto_resize__title">Auto resize circle</string>
    <string name="settings__keyboard__circle__auto_resize__summary__on">Reduce the circle size when a movement starting from it</string>
    <string name="settings__keyboard__circle__auto_resize__summary__off">Keep the circle size all time</string>
    <string name="settings__keyboard__circle__dynamic_centre__title">Dynamically move the circle</string>
    <string name="settings__keyboard__circle__dynamic_centre__summary">Move the circle to where it has been first pressed</string>
    <string name="settings__keyboard__circle__dynamic_centre_overlay_enabled__title">Show an overlay of the dynamic circle</string>
    <string name="settings__keyboard__circle__size__title">Circle size</string>
    <string name="settings__keyboard__circle__size__summary">Resize circle according to your needs</string>
    <string name="settings__keyboard__circle__offset_and_height_group__title">Circle offsets and keyboard height</string>
    <string name="settings__keyboard__circle__x__centre__offset__title">Circle offset X axis</string>
    <string name="settings__keyboard__circle__y__centre__offset__key">prefs_keyboard_circle_centre_y_offset</string>
    <string name="settings__keyboard__circle__y__centre__offset__title">Circle offset Y axis</string>
    <string name="settings__keyboard__height__title">Keyboard height</string>
    <string name="settings__keyboard__height__summary">Resize keyboard to your needs</string>
    <string name="settings__keyboard__sidebar__group__title">Sidebar</string>
    <string name="settings__keyboard__sidebar__is__visible__title">Sidebar visibility</string>
    <string name="settings__keyboard__sidebar__is__visible__summary__on">Sidebar is currently visible</string>
    <string name="settings__keyboard__sidebar__is__visible__summary__off">Sidebar is currently hidden</string>
    <string name="settings__keyboard__sidebar__is__on__left__title">Sidebar on the left</string>
    <string name="settings__keyboard__sidebar__is__on__left__summary__on">Sidebar is currently on the left</string>
    <string name="settings__keyboard__sidebar__is__on__left__summary__off">Sidebar is currently on the right</string>
    <string name="settings__keyboard__clipboard__enabled__title">Enable clipboard</string>
    <string name="settings__keyboard__clipboard__enabled__summary__on">Clipboard is enabled</string>
    <string name="settings__keyboard__clipboard__enabled__summary__off">Clipboard is disabled</string>
    <string name="settings__keyboard__clipboard__max_history__title">Max history</string>
    <string name="settings__keyboard__display__group__title">Keyboard display</string>
    <string name="settings__keyboard__display__show__sector__icons__title">Display sector icons</string>
    <string name="settings__keyboard__display__show__sector__icons__summary__on">Sector icons are enabled</string>
    <string name="settings__keyboard__display__show__sector__icons__summary__off">Sector icons are disabled</string>
    <string name="settings__keyboard__display__show__letters__on__wheel__title">Display letters on X-pad</string>
    <string name="settings__keyboard__display__show__letters__on__wheel__summary__on">Letters on X-pad are visible</string>
    <string name="settings__keyboard__display__show__letters__on__wheel__summary__off">Letters on X-pad are not visible</string>
    <string name="settings__keyboard__trail__is__visible__title">Display touch trail</string>
    <string name="settings__keyboard__trail__is__visible__summary__on">Trail will be visible when typing</string>
    <string name="settings__keyboard__trail__is__visible__summary__off">No trail will be shown when typing</string>
    <string name="settings__keyboard__haptic__sound__group__title">Haptic and sound</string>
    <string name="settings__keyboard__haptic__feedback__enabled__title">Enable input haptic feedback</string>
    <string name="settings__keyboard__haptic__feedback__enabled__summary__on">Haptic feedback is enabled</string>
    <string name="settings__keyboard__haptic__feedback__enabled__summary__off">Haptic feedback is disabled</string>
    <string name="settings__keyboard__haptic__feedback__haptic_sector_cross_enabled__title">Enable input haptic feedback when crossing sectors</string>
    <string name="settings__keyboard__haptic__feedback__sound_sector_cross_enabled__title">Enable sounds feedback when crossing sectors</string>
    <string name="settings__keyboard__sound__feedback__enabled__title">Enable keypress sounds</string>
</resources>